<resources>
    <string name="app_name">Đinh Trọng Đạt (1914775) - Đề số 1</string>
    <string name="app_value">Nhập giá trị</string>
    <string name="app_fullname">Họ và tên</string>
    <string name="app_X">Gía trị X</string>
    <string name="app_Y">Gía trị Y</string>
    <string name="app_Z">Gía trị Z</string>
    <string name="app_clear">Xóa trắng</string>
    <string name="app_back">Quay lại</string>
    <string name="app_result">Kết quả tính toán</string>
    <string name="app_ok">Đồng ý</string>
    <string name="app_plus">Phép cộng</string>
    <string name="app_mul">Phép nhân</string>
    <string name="app_exp">Phép lũy thừa</string>
</resources>