<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_value"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_fullname"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edt_hovaten"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_radius"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_X"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edt_giatrix"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_radius"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_Y"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edt_giatriy"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_radius"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_Z"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edt_giatriz"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_radius"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFullName"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/app_fullname"
            android:textAllCaps="false"
            android:background="@drawable/btn_radius"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOK"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/app_ok"
            android:textAllCaps="false"
            android:background="@drawable/btn_radius"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/app_clear"
            android:textAllCaps="false"
            android:background="@drawable/btn_radius"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>